--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -59,6 +59,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1115394"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(encode(text))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -70,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -119,13 +139,15 @@
       "  1 30 13 23 17 31 10  1 18 27 30  1 32 20 17  1 19 27 16 31  1 23 26 27\n",
       " 35  1 21  0 31 28 17 13 23  1 32 20 21 31  1 21 26  1 20 33 26 19 17 30\n",
       "  1 18 27 30  1 14 30 17 13 16  6  1 26 27 32  1 21 26  1 32 20 21 30 31\n",
-      " 32  1 18 27 30  1 30 17 34 17 26 19 17  8  0  0], shape=(1000,), dtype=int32)\n"
+      " 32  1 18 27 30  1 30 17 34 17 26 19 17  8  0  0], shape=(1000,), dtype=int32)\n",
+      "1115394\n"
      ]
     }
    ],
    "source": [
     "data = tf.constant(encode(text), dtype=tf.int32)\n",
-    "print(data[:1000])"
+    "print(data[:1000])\n",
+    "print(len(data))"
    ]
   },
   {
