--- a/blabla.ipynb
+++ b/blabla.ipynb
@@ -29,6 +29,17 @@
     "        else:\n",
     "            continue\n",
     "        \n",
+    "# revert the above function to get the json files back from the numpy arrays\n",
+    "def nparray_to_json():\n",
+    "    for filename in os.listdir('Dataset_tokenized_BPE'):\n",
+    "        if filename.endswith('.npy'):\n",
+    "            data = np.load('Dataset_tokenized_BPE/' + filename)\n",
+    "            with open('Dataset_tokenized_BPE/' + filename[:-4] + '.json', 'w') as f:\n",
+    "                json.dump(data.tolist(), f)\n",
+    "            continue\n",
+    "        else:\n",
+    "            continue\n",
+    "        \n",
     "# open .npy files from a folder and concatenate them into one numpy array\n",
     "def npy_to_nparray():   \n",
     "    data = []\n",
@@ -56,7 +67,12 @@
     "        continue \n",
     "    else: \n",
     "        continue \n",
-    "    \n"
+    "    \n",
+    "# revert the above funtion to get the .npy files back from the numpy array\n",
+    "def nparray_to_npy():\n",
+    "    # create a folder to store the .npy files\n",
+    "    if not os.path.exists('Dataset_tokenized_BPE'):\n",
+    "        "
    ]
   },
   {
